# rqt_oni_vicon_recorder

./: README.md  package.xml  plugin.xml
include/rqt_oni_vicon_recorder/: acquisition_controller.hpp
launch/: rqt_all_plugin.launch
rqt_oni_vicon_recorder/src/rqt_oni_vicon_recorder/: acquisition_controller.cpp
scripts/: rqt_oni_vicon_recorder
src/oni_vicon_calibration/: CMakeLists.txt  package.xml
src/oni_vicon_calibration/action/: GlobalCalibration.action  LocalCalibration.action  TestCalibration.action
src/oni_vicon_calibration/include/oni_vicon_calibration/: calibrator.hpp
src/oni_vicon_calibration/src/oni_vicon_calibration/: calibrator.cpp
src/oni_vicon_player/: package.xml
src/oni_vicon_recorder/: CMakeLists.txt  package.xml  setup.py
src/oni_vicon_recorder/action/: ChangeDepthSensorMode.action  ConnectToVicon.action  Record.action  RunDepthSensor.action  StartDepthSensor.action  StartRecording.action  StopRecording.action
src/oni_vicon_recorder/include/oni_vicon_recorder/: arm_rgbd_node.h  frame_time_tracker.hpp  kinect.h  namespaces.hpp  oni_recorder.hpp  oni_vicon_recorder.hpp  rainbow.h  vicon_recorder.hpp
src/oni_vicon_recorder/launch/: arm_rgbd.launch  arm_rgbd_no_calib.launch  fake_local.launch  oni_vicon_recorder_local.launch
src/oni_vicon_recorder/src/: frame_time_tracker.cpp  kinect.cc  oni_recorder.cpp  oni_vicon_recorder.cpp  oni_vicon_recorder_node.cpp  rainbow.c  vicon_recorder.cpp
src/oni_vicon_recorder/srv/: RecordingStatus.srv  VerifyObjectExists.srv  ViconFrame.srv  ViconObjectPose.srv  ViconObjects.srv
src/rqt_oni_vicon_recorder/: CMakeLists.txt  acquisition_controller.cpp  setup.py
src/rqt_oni_vicon_recorder/include/rqt_oni_vicon_recorder/: acquisition_controller.hpp
